update experience and education

--- a/index.html
+++ b/index.html
@@ -166,64 +166,28 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-        <div data-date="December 2017 – Present">
-                <h3> Constituent Voice | NWYC</h3>
-                <h4>Software Developer</h4>
-                <p>
-                    Refactored business critical SuiteScript 1.0 scripts into type-safe, TypeScript transpiled SuiteScript 2.0 scripts.
-                <p><br>
-                    Built a custom NetSuite page (Suitelet) for uploading large CSV files, as well as ETL Map/Reduce functionality to extract and integrate these files, creating thousands of Lead records within NetSuite on a daily basis.
-                </p><br>
-                <p>
-                    Built an internal web app using ReactJS which accessed three separate APIs in order to extract customer information recorded in a third-party app and associate that information with the customer record stored in NetSuite.
-                </p><br>
-                <p>
-                    Wrote Node.js scripts for standardizing, cleaning, consolidating and filtering large data sets.               
-                </p><br>
-                <p>
-                    Wrote a TypeScript program to extract over three million addresses from NetSuite, acquire the geocodes for those addresses using the Google Map API, format the geocodes, and import them back into NetSuite and Firebase.
-                </p><br>
-                <p>
-                    Contributed to the custom integration of an iOS and Android app with NetSuite using a TypeScript transpiled SuiteScript 2.0 collection of RESTlets and Map/Reduce scripts.
-                </p><br>
-                <p>
-                    Wrote and implemented Firebase cloud functions that listen for a change or creation of an address, or geocodes, and then fetches and updates the Firebase document with the new geocodes or the new address (reverse-geocode), respectively.
-                </p><br>
-                <p>
-                    Wrote and maintained various client/server scripts for both built-in and custom records within NetSuite.
-                </p>
-            </div>
-
-            <div data-date="April 2011 – June 2017">
-                <h3>Logos Research Systems | Faithlife Corporation</h3>
-                <h4>Scholar-in-Residence</h4>
-                <p>
-                    Pioneered a variety of digital research resources, taking projects from concept to market
-                <p><br>
-                    Led a team of data analysts, developers, and editors, overseeing production, solving conceptual and practical problems, and guaranteeing each project was completed according to specifications
-                </p><br>
-                <p>
-                    Meticulously tracked workflow to ensure projects were completed on time and on budget, securing return on investment
-                </p><br>
-                <p>
-                    Worked cross-departmentally with developers, marketing, sales, publications, and design to optimize product awareness and increase sales by writing blogs posts, web copy, and scripting screencasts and product videos
-                </p>
-            </div>
+        <div data-date="December 2019 – Present">
+            <h3>SaaS Consulting Group</h3>
+            <h4>Sr. Technical Consultant</h4>
+        </div>    
+        <div data-date="December 2018 – 2019">
+            <h3> Constituent Voice | NWYC</h3>
+            <h4>Lead NetSuite Developer</h4>
+        </div>    
+        <div data-date="December 2017 – 2018">
+            <h3> Constituent Voice | NWYC</h3>
+            <h4>NetSuite Developer</h4>
+        </div>
+        <div data-date="April 2011 – June 2017">
+            <h3>Logos Research Systems | Faithlife Corporation</h3>
+            <h4>Scholar-in-Residence</h4>
+        </div>
         </div>
     </div>
     <!-- End #experience -->
 
     <div id="education">
         <h2 class="heading">Education</h2>
-        <div class="education-block">
-            <h3>Digital Crafts</h3>
-            <span class="education-date">Sept 2017 - Jan 2018</span>
-            <h4>Full Stack Immersive Bootcamp</h4>
-            <p>
-            </p>
-        </div>
-        <!-- End .education-block -->
-
         <div class="education-block">
             <h3>University of Stellenbosch, South Africa</h3>
             <span class="education-date">May 2011 - Dec 2014</span>
