remove git logger

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     </div>
     <!-- End #education -->
 
-    <div id="experience">
+    <!-- <div id="experience">
         <h2 class="heading">Git Hub</h2>
         <div class="container">
             <div class="row">
@@ -221,7 +221,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
         <!-- End Github -->
 
 
